<resources>
    <string name="app_name">Drawin\'</string>
    <string name="action_settings">Excluir</string>

    <string name="hello_world">Hello world!</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="opacity">Opacity</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
</resources>
