<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorForegroundInverse"
    android:backgroundTint="@color/colorAccent"
    android:orientation="vertical"
    tools:context="br.unicamp.a154646.t177306.drawin.TelaDesenho">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etNome"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_weight="3.72"
            android:backgroundTint="@color/colorAccent"
            android:ems="10"
            android:hint="Nome do Desenho"
            android:maxLength="16"
            android:textAlignment="center"
            android:textIsSelectable="false"
            android:textStyle="bold|italic" />

        <ImageButton
            android:id="@+id/new_btn"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_marginRight="0dp"
            android:backgroundTint="@color/colorAccent"
            android:contentDescription="@string/start_new"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:src="@drawable/delete" />

        <ImageButton
            android:id="@+id/save_btn"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:backgroundTint="@color/colorAccent"
            android:contentDescription="@string/save"
            android:src="@drawable/save"
            android:layout_weight="0.98" />

    </LinearLayout>

    <br.unicamp.a154646.t177306.drawin.DrawingView
        android:id="@+id/drawing"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:background="#FFFFFFFF" />

    <!-- Custom View -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <!-- Top Row -->

        <LinearLayout
            android:id="@+id/paint_colors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#FF660000"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FF660000" />

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#FFFF0000"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FFFF0000" />

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#FFFFCC00"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FFFFCC00" />

            <ImageButton
                android:id="@+id/imageButton8"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#FF009900"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FF009900" />

            <ImageButton
                android:id="@+id/imageButton9"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#FF0000FF"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FF0000FF" />

            <ImageButton
                android:id="@+id/imageButton10"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#FF990099"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FF990099" />

            <ImageButton
                android:id="@+id/imageButton11"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#FFFFFFFF"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FFFFFFFF" />

            <ImageButton
                android:id="@+id/imageButton12"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#FF000000"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FF000000" />

        </LinearLayout>

        <!-- Bottom Row -->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:backgroundTint="@color/colorAccent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/new_audio"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorAccent"
                android:src="@drawable/microphoneoff"
                android:tint="@android:color/background_dark" />

            <ImageButton
                android:id="@+id/save_audio"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginRight="3dp"
                android:backgroundTint="@color/colorAccent"
                android:src="@drawable/microphone"
                android:tint="@android:color/background_dark" />

            <ImageButton
                android:id="@+id/draw_btn"
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:layout_marginRight="3dp"
                android:backgroundTint="@color/colorAccent"
                android:contentDescription="@string/brush"
                android:src="@drawable/brush" />

            <ImageButton
                android:id="@+id/erase_btn"
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:layout_marginRight="3dp"
                android:backgroundTint="@color/colorAccent"
                android:contentDescription="@string/erase"
                android:src="@drawable/eraser" />

            <ImageButton
                android:id="@+id/opacity_btn"
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:layout_marginRight="3dp"
                android:backgroundTint="@color/colorAccent"
                android:contentDescription="@string/opacity"
                android:src="@drawable/opacityicon" />

        </LinearLayout>
    </LinearLayout>

    <!-- Color Palette -->

</LinearLayout>
